Fix spacing issue caused by erroneous conversion from px to em

--- a/css/dashboard.sass
+++ b/css/dashboard.sass
@@ -2,7 +2,7 @@
   background-color: #eeeeee
   font-family     : "Open Sans Source Pro", "Helvetica", "Arial", sans-serif
   height          : 100%
-  padding         : 10.313em
+  padding         : 1.313em
 
   & .btn
     background-color: #000
@@ -30,7 +30,7 @@
       color: lighten($panel-blue-color, 25%)
 
     & > i
-      margin-right: 10.313em
+      margin-right: 1.313em
 
   .navbar-fixed-top
     margin-bottom: 0
